[gd_scene load_steps=13 format=2]

[ext_resource path="res://images/map/map.jpg" type="Texture" id=1]
[ext_resource path="res://images/dia/bro_intro.jpg" type="Texture" id=2]
[ext_resource path="res://addons/egoventure/nodes/hotspots/map_hotspot.gd" type="Script" id=3]
[ext_resource path="res://images/map/kevo.png" type="Texture" id=4]
[ext_resource path="res://images/map/map_brother.png" type="Texture" id=5]
[ext_resource path="res://images/man/man_intro.jpg" type="Texture" id=6]
[ext_resource path="res://music/guitar.ogg" type="AudioStream" id=7]
[ext_resource path="res://scenes/misc/map.gd" type="Script" id=8]
[ext_resource path="res://music/stina.ogg" type="AudioStream" id=9]
[ext_resource path="res://images/misc/trans.png" type="Texture" id=10]
[ext_resource path="res://images/misc/map_highlight.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="MapHotspot" type="TextureButton" parent="."]
margin_left = 344.811
margin_top = 340.0
margin_right = 1030.81
margin_bottom = 429.0
mouse_default_cursor_shape = 12
texture_normal = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 11
target_scene = "res://scenes/brother/bro1.tscn"
loading_image = ExtResource( 2 )
location_music = ExtResource( 9 )
location = "brother"
state_variable = "map_bro_new"

[node name="map_kevo" type="TextureButton" parent="."]
margin_left = 1199.59
margin_top = 422.0
margin_right = 1774.59
margin_bottom = 511.0
mouse_default_cursor_shape = 12
texture_normal = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 11
target_scene = "res://scenes/man/man01.tscn"
loading_image = ExtResource( 6 )
location_music = ExtResource( 7 )
location = "man"
state_variable = "map_kevo_new"

[node name="map_kevo_new" type="AnimatedSprite" parent="."]
position = Vector2( 1162.01, 455.205 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="map_bro_new" type="AnimatedSprite" parent="."]
position = Vector2( 308.996, 374.547 )
frames = SubResource( 1 )
playing = true
